<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.github.allaudin.coconut.CoconutDemoActivity">

    <io.github.allaudin.coconut.widget.CoconutTextInputLayout
        android:id="@+id/email_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <io.github.allaudin.coconut.widget.CoconutInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textSize="14sp"
            app:cnt_input_et_error_message="@string/email_error"
            app:cnt_input_et_validation_regex="@string/cnt_email_address" />
    </io.github.allaudin.coconut.widget.CoconutTextInputLayout>


    <io.github.allaudin.coconut.widget.CoconutTextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_layout">

        <io.github.allaudin.coconut.widget.CoconutInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="#000000"
            android:textSize="14sp"
            app:cnt_input_et_error_message="@string/pass_error"
            app:cnt_input_et_validation_regex="@string/password_regex" />
    </io.github.allaudin.coconut.widget.CoconutTextInputLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <io.github.allaudin.coconut.widget.CoconutEditText
        android:id="@+id/optional_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/optional_field"
        app:cnt_et_optional="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_layout" />

    <io.github.allaudin.coconut.widget.CoconutEditText
        android:id="@+id/mandatory_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/mandatory_field_error"
        android:singleLine="true"
        app:cnt_et_error_message="@string/mandatory_field_error"
        app:cnt_et_validation_regex="@string/cnt_digits_only"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/optional_field" />
</android.support.constraint.ConstraintLayout>
